src/objects/Portfolio__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Property__r.Property_Address__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Property__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Portfolio Properties</relationshipLabel>
        <relationshipName>Portfolios</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Portfolios1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Square_Footage2__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <formula>Property__r.Number_of_Stories__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT (Property__r.State__c)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Portfolio</label>
    <nameField>
        <displayFormat>P{000000000}</displayFormat>
        <label>Portfolio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>